Bug 309223 - 'Download Actions' description is too small in Pinstripe. r=mconnor, a=mtschrep.

--- a/mozilla/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/mozilla/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -198,7 +198,7 @@ caption {
   padding: 4px 4px 0px 0px !important;
 }
 
-#paneGeneral description, #paneAdvanced description {
+#paneGeneral description, #paneAdvanced description, #paneDownloads description {
   font: -moz-dialog;
 }
 
